tests/rosetta/out/Pascal/arrays.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/arrays.pas
arrays.pas(15,8) Error: Incompatible types: got "Char" expected "TArray$1$crc9F312717"
arrays.pas(19,40) Error: Identifier not found "_indexList"
arrays.pas(19,62) Fatal: Syntax error, ")" expected but "," found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
